--- a/src/pages/EditorPage/EditorPage.scss
+++ b/src/pages/EditorPage/EditorPage.scss
@@ -1,16 +1,21 @@
 .EditorPage {
+	display: flex;
 	flex: 1;
 	flex-direction: column;
 	overflow: hidden;
+	// max-height: 100%;
+	width: 100%;
+
 	.layout {
 		flex: 1;
 		overflow: hidden;
 		display: flex;
 		align-items: stretch;
-		gap: 20px;
+		// gap: 20px;
 		max-height: 100%;
 		& > * {
 			overflow: hidden;
+			padding: 0 20px;
 			&.scrollable {
 				oveflow: auto;
 			}
