--- a/src/pages/LoadDataPage/LoadDataPage.scss
+++ b/src/pages/LoadDataPage/LoadDataPage.scss
@@ -3,14 +3,20 @@
 .LoadDataPage {
 	flex: 1;
 	transition: all 250ms;
+	// padding: 24px;
+	// max-width: 60rem;
+	max-width: 100%;
+
 	&.loading {
 		opacity: .25;
 		pointer-events: none;
 	}
 	section {
 		margin: 16px 0;
+		padding: 0 20px;
 		&.vpadded {
-			padding: 16px 0;
+			padding-top: 16px;
+			padding-bottom: 16px;
 		}
 		&.delimited {
 			border-top: 1px solid color.change(black, $alpha: 0.1);
