--- a/src/routes/AppLayout.scss
+++ b/src/routes/AppLayout.scss
@@ -8,9 +8,10 @@
 		flex: 1;
 		display: flex;
 		flex-direction: column;
+		align-items: center;
 		overflow: hidden;
-		padding: 1rem;
 		width: 100%;
+		// padding: 1rem;
 		// max-width: 64rem; // Limit max layout width
 		margin: 0 auto;
 		box-sizing: border-box;
