--- a/src/components/ui/Toasts/Toast.scss
+++ b/src/components/ui/Toasts/Toast.scss
@@ -1,39 +1,38 @@
 article {
-	color: white;
-	padding: 0.75rem 1.25rem;
-	border-radius: 0.2rem;
-	display: flex;
-	gap: .3em;
-	align-items: center;
-	margin: 0 auto 0.5rem auto;
-	width: 20rem;
+  color: white;
+  padding: 0.75rem 1.25rem;
+  border-radius: 0.2rem;
+  display: flex;
+  gap: 0.3em;
+  align-items: center;
+  margin: 0 auto 0.5rem auto;
+  width: 20rem;
 }
 .error {
-	// background: IndianRed;
-	background-color: $errorColor;
+  // background: IndianRed;
+  background-color: $errorColor;
 }
 .success {
-	// background: MediumSeaGreen;
-	background-color: $successColor;
+  // background: MediumSeaGreen;
+  background-color: $successColor;
 }
 .info {
-	// background: SkyBlue;
-	background-color: $infoColor;
+  // background: SkyBlue;
+  background-color: $infoColor;
 }
 .text {
-	margin-left: 1rem;
+  margin-left: 1rem;
 }
 button {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	color: white;
-	background: transparent;
-	border: 0 none;
-	padding: 0;
-	margin: 0 0 0 auto;
-	line-height: 1;
-	font-size: 1rem;
-	cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  background: transparent;
+  border: 0 none;
+  padding: 0;
+  margin: 0 0 0 auto;
+  line-height: 1;
+  font-size: 1rem;
+  cursor: pointer;
 }
-
