--- a/src/core/assets/scss/variables.scss
+++ b/src/core/assets/scss/variables.scss
@@ -18,7 +18,7 @@ $defaultFontSizePx: 14px;
 
 // Base colors...
 
-$primaryColor: #1976D2;
+$primaryColor: #1976d2;
 $secondaryColor: #ffa550;
 
 $defaultTextColor: #333;
