Calmed eslint warnings.

--- a/src/pages/EditorPage/EditorPage.scss
+++ b/src/pages/EditorPage/EditorPage.scss
@@ -16,9 +16,11 @@
     & > * {
       overflow: hidden;
       padding: 0 20px;
-      &.scrollable {
-        oveflow: auto;
-      }
+      /* // TODO?
+       * &.scrollable {
+       *   oveflow: auto;
+       * }
+       */
     }
   }
   .column {
