Added stylelint, calmed stylelint warnings.

--- a/src/core/assets/scss/variables.module.scss
+++ b/src/core/assets/scss/variables.module.scss
@@ -1,3 +1,5 @@
+/* stylelint-disable property-no-unknown */
+
 // @desc Export variables for use in js code.
 // Eg: Use `import cssVariables from '@/src/core/assets/scss/variables.module.scss';` to access data from js/ts modules.
 
