--- a/src/pages/EditorPage/EditorPage.scss
+++ b/src/pages/EditorPage/EditorPage.scss
@@ -3,7 +3,6 @@
   flex: 1;
   flex-direction: column;
   overflow: hidden;
-  // max-height: 100%;
   width: 100%;
 
   .layout {
@@ -11,11 +10,13 @@
     overflow: hidden;
     display: flex;
     align-items: stretch;
-    // gap: 20px;
     max-height: 100%;
+    // XXX: NOTE: Temporarily spacings for demo: later inner spacing should be used
+    margin: 0 16px;
+    gap: 16px;
     & > * {
       overflow: hidden;
-      padding: 0 20px;
+      // padding: 0 20px;
       /* // TODO?
        * &.scrollable {
        *   oveflow: auto;
@@ -24,14 +25,19 @@
     }
   }
   .column {
-    overflow: auto;
+    display: flex;
+    /* &.scrollable {
+     *   overflow: auto;
+     * }
+     */
   }
   .sideColumn {
     min-width: 200px;
     max-width: 350px;
-    width: 25%;
+    width: 20%;
   }
   .mainColumn {
     flex: 1;
+    // flex-direction: column; // DEMO?
   }
 }
