Issue #3: Added svelteui library, basic app constants, new sveltleui-based layout, header, navbar with menu, top menu.

--- a/src/core/assets/scss/variables.scss
+++ b/src/core/assets/scss/variables.scss
@@ -18,7 +18,9 @@ $defaultFontSizePx: 14px;
 
 // Base colors...
 
-$primaryColor: #1976d2;
+// TODO: Extract color variables from svelteui?
+$primaryColorMUI: #1976d2;
+$primaryColor: #339af0;
 $secondaryColor: #ffa550;
 
 $defaultTextColor: #333;
