--- a/src/routes/styles.scss
+++ b/src/routes/styles.scss
@@ -13,12 +13,13 @@
   --column-width: 42rem;
   --column-margin-top: 4rem;
   font-family: var(--font-body);
-  color: var(--color-text);
+  // color: var(--color-text);
 }
 
 body {
   min-height: 100vh;
   margin: 0;
+  /* // Gradient background
   background-attachment: fixed;
   background-color: var(--color-bg-1);
   background-size: 100vw 100vh;
@@ -28,8 +29,10 @@ body {
       rgba(255, 255, 255, 0) 100%
     ),
     linear-gradient(180deg, var(--color-bg-0) 0%, var(--color-bg-1) 15%, var(--color-bg-2) 50%);
+  */
 }
 
+/* // Some basic sample styles
 h1,
 h2,
 p {
@@ -106,3 +109,4 @@ button:focus:not(:focus-visible) {
   width: 1px;
   white-space: nowrap;
 }
+*/
