Issue #3: Created stubs for `EditableField` and its demos (in progress).

--- a/src/components/app/AppLayout/AppLayout.module.scss
+++ b/src/components/app/AppLayout/AppLayout.module.scss
@@ -1,5 +1,6 @@
 .AppLayout {
-  &, & > div {
+  &,
+  & > div {
     // Stylize unclassed wrapper too
     display: flex;
     flex-direction: column;
