--- a/src/components/app/AppLayout/NavContent.module.scss
+++ b/src/components/app/AppLayout/NavContent.module.scss
@@ -1,25 +1,25 @@
 .NavContent {
   .items {
-  .item {
-    padding: 12px;
-    border-radius: 4px;
-    text-decoration: none;
-    &,
-    &:visited {
-      color: $primaryColor;
+    .item {
+      padding: 12px;
+      border-radius: 4px;
+      text-decoration: none;
+      &,
+      &:visited {
+        color: $primaryColor;
+      }
+      &:hover {
+        background-color: color.change($primaryColor, $alpha: 0.1);
+        text-decoration: underline;
+      }
+      &.active {
+        background-color: color.change($primaryColor, $alpha: 0.2);
+        /*!KEEP*/
+        // border: 1px solid red;
+      }
+      &.active:hover {
+        background-color: color.change($primaryColor, $alpha: 0.3);
+      }
     }
-    &:hover {
-      background-color: color.change($primaryColor, $alpha: .1);
-      text-decoration: underline;
-    }
-    &.active {
-      background-color: color.change($primaryColor, $alpha: .2);
-      /*!KEEP*/
-      // border: 1px solid red;
-    }
-    &.active:hover {
-      background-color: color.change($primaryColor, $alpha: .3);
-    }
-  }
   }
 }
