--- a/src/pages/LoadDataPage/LoadDataPage.module.scss
+++ b/src/pages/LoadDataPage/LoadDataPage.module.scss
@@ -68,7 +68,8 @@
       overflow: hidden;
       height: 100%;
       width: 100%;
-      &, &::-webkit-file-upload-button {
+      &,
+      &::-webkit-file-upload-button {
         cursor: pointer;
       }
     }
