--- a/src/components/app/AppLayout/AppLayout.module.scss
+++ b/src/components/app/AppLayout/AppLayout.module.scss
@@ -52,7 +52,7 @@
     flex-direction: column;
     align-items: stretch;
     justify-content: stretch;
-    height: 100vh;
+    // height: 100vh;
     overflow: hidden;
   }
   .AppLayout_MainContent {
