Issue #3: Partially styled `EditableList` component, added interactive features to add/remove items in `EditableList`, added end-to-end parameters to pass css class names to nested and composed editable nodes, added hasing item keys to `EditableList` (to allow svelte engine to track of items in the edited list).

--- a/src/core/assets/scss/mixins.scss
+++ b/src/core/assets/scss/mixins.scss
@@ -49,3 +49,10 @@
   justify-content: center;
   align-items: stretch;
 }
+
+// Editables
+@mixin EditableLabel {
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 600;
+}
