--- a/src/core/assets/scss/variables.scss
+++ b/src/core/assets/scss/variables.scss
@@ -70,3 +70,7 @@ $graphLabelBorderDarkColor: color.change($graphLabelBgDarkColor, $alpha: 0.85);
 
 $graphLabelFontLightColor: #ccc;
 $graphLabelFontDarkColor: #333;
+
+// Input elements
+
+$defaultInputHeight: 36px;
