--- a/src/core/assets/scss/variables.module.scss
+++ b/src/core/assets/scss/variables.module.scss
@@ -52,4 +52,8 @@
 
   graphLabelBorderLightColor: $graphLabelBorderLightColor;
   graphLabelBorderDarkColor: $graphLabelBorderDarkColor;
+
+  // Input elements
+
+  defaultInputHeight: $defaultInputHeight;
 }
