Issue #9: Added `EditableTable` table parameters (`flatObjects`, `showFlatFields`, `editInPlace`, `useActionsColumn`), added styles for table, added actions for header (add) and rows (remove) -- without handlers, in progress.

--- a/src/core/assets/scss/variables.module.scss
+++ b/src/core/assets/scss/variables.module.scss
@@ -11,7 +11,7 @@
   animationTimeMs: $animationTimeMs;
   disappearTimeMs: $disappearTimeMs;
 
-  defaultFontSizePx: $defaultFontSizePx;
+  defaultFontSize: $defaultFontSize;
 
   primaryColor: $primaryColor;
   secondaryColor: $secondaryColor;
