--- a/src/core/assets/scss/variables.scss
+++ b/src/core/assets/scss/variables.scss
@@ -14,12 +14,12 @@ $disappearTimeMs: 1000ms;
 
 // Font sizes...
 
-$defaultFontSizePx: 14px;
+$defaultFontSize: 14px;
 
 // Base colors...
 
 // TODO: Extract color variables from svelteui?
-$primaryColorMUI: #1976d2;
+$primaryColorMUI: #1976d2; // UNUSED?
 $primaryColor: #339af0;
 $secondaryColor: #ffa550;
 
