Issue #9: Added handlers for rows romve and add, removed extra debug code, fixed table action button styles, added (extra?) `EditableTable` option `hideRemoveButton`.

--- a/src/components/data/EditableTable/HeaderActions/HeaderActions.module.scss
+++ b/src/components/data/EditableTable/HeaderActions/HeaderActions.module.scss
@@ -5,6 +5,6 @@
 .addRowIcon {
   color: #fff;
   &:hover {
-    background-color: color.adjust($primaryColor, $lightness: -5%);
+    background-color: color.adjust($primaryColor, $lightness: -5%) !important;
   }
 }
