Issue #9: Created `EditableTable` active rows (if passed `activeRows` parameter) (with prevention of row click if inner buttons had clicked before; no other clickable elements allowed inside the rows).

--- a/src/components/data/EditableTable/EditableTable.module.scss
+++ b/src/components/data/EditableTable/EditableTable.module.scss
@@ -29,5 +29,14 @@
     td {
       border-bottom: 1px solid $borderColor;
     }
+    &.activeRows {
+      tbody tr {
+        transition: all $transitionTimeMs;
+        cursor: pointer;
+        &:hover {
+          background-color: color.change($primaryColor, $alpha: .1);
+        }
+      }
+    }
   }
 }
