Issue #9: Created modal for edit row data. Added styles for `EditableField` and `EditableObject` components. Added `EditRowForm` -- form to display data edit controls inside row edit modal. Exported type `TGenericEditableOnChangeCallback` from `GenericEditable`. Fixed mixins -- used variables import iside the module. Fixed z-index bugs.

--- a/src/components/data/EditableTable/EditableTable.module.scss
+++ b/src/components/data/EditableTable/EditableTable.module.scss
@@ -34,7 +34,7 @@
         transition: all $transitionTimeMs;
         cursor: pointer;
         &:hover {
-          background-color: color.change($primaryColor, $alpha: .1);
+          background-color: color.change($primaryColor, $alpha: 0.1);
         }
       }
     }
