--- a/src/core/assets/scss/variables.scss
+++ b/src/core/assets/scss/variables.scss
@@ -12,9 +12,11 @@ $transitionTimeMs: 250ms;
 $animationTimeMs: 500ms;
 $disappearTimeMs: 1000ms;
 
-// Font sizes...
+// Fonts settings...
 
 $defaultFontSize: 14px;
+$defaultFontFamily: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial,
+  sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
 
 // Base colors...
 
