--- a/src/components/app/AppLayout/AppLayout.module.scss
+++ b/src/components/app/AppLayout/AppLayout.module.scss
@@ -10,6 +10,7 @@
   .AppLayout_Footer,
   .AppLayout_Header,
   .AppLayout_Navbar {
+    // DEBUG!
     /*!KEEP*/
   }
   .AppLayout_Header {
@@ -17,7 +18,7 @@
     flex-shrink: 0;
     align-items: stretch;
     justify-content: stretch;
-    z-index: 1000;
+    z-index: 100;
   }
   .AppLayout_Footer {
     flex-shrink: 0;
