Issue #7: Added stylings for groups and labels for editing objects.

--- a/src/components/data/EditableField/EditableField.module.scss
+++ b/src/components/data/EditableField/EditableField.module.scss
@@ -4,7 +4,8 @@
     &,
     &:global(.svelteui-InputWrapper-label) {
       @include EditableLabel;
-      color: $defaultTextColor;
+      // color: $defaultTextColor;
+      color: $primaryColor;
     }
   }
 }
