--- a/src/components/data/EditableList/EditableList.module.scss
+++ b/src/components/data/EditableList/EditableList.module.scss
@@ -9,10 +9,18 @@
   &,
   .ItemsWrapper {
     display: flex;
-    flex-direction: column;
-    align-items: stretch;
-    gap: 8px;
+    gap: 4px;
     flex-wrap: wrap;
+  }
+  &[data-layout='vertical'] {
+    &,
+    .ItemsWrapper {
+      flex-direction: column;
+      align-items: stretch;
+    }
+    .Label {
+      @include EditableVerticalSectionLabel;
+    }
   }
   @at-root &[data-layout='horizontal'] {
     &,
@@ -29,5 +37,11 @@
   }
   .ItemElement {
     flex: 1;
+  }
+  .removeRowIcon {
+    color: $errorColor;
+  }
+  .addRowIcon {
+    color: $successColor;
   }
 }
