--- a/src/components/data/EditableObject/EditableObject.module.scss
+++ b/src/components/data/EditableObject/EditableObject.module.scss
@@ -6,7 +6,7 @@
   gap: 4px;
   &[data-layout='horizontal'] {
     // DEBUG
-    border: 4px solid $demoColor;
+    // border: 4px solid $demoColor;
   }
   &[data-layout='vertical'] {
     flex-direction: column;
