Issue #10: Fixed errros with datasets switching on `EditorPage`, in progress: bug with `extendDataSetSpec`.

--- a/src/components/RandoEditor/DataEditorWrapper/DataEditorWrapper.scss
+++ b/src/components/RandoEditor/DataEditorWrapper/DataEditorWrapper.scss
@@ -1,7 +1,11 @@
 .DataEditorWrapper {
-  /*!KEEP*/
+  margin: 16px 0;
   display: flex;
   flex-direction: column;
+  gap: 16px;
+  .header {
+    @include BigTitleText;
+  }
   .container {
     flex: 1;
     overflow: hidden;
