--- a/src/components/data/EditableList/EditableList.module.scss
+++ b/src/components/data/EditableList/EditableList.module.scss
@@ -1,30 +1,30 @@
 .EditableList {
   .ItemElement,
-  .ItemsWrapper {
+  > .ItemsWrapper {
     /*!KEEP*/
   }
-  .Label {
+  > .Label {
     @include EditableLabel;
   }
   &,
-  .ItemsWrapper {
+  > .ItemsWrapper {
     display: flex;
     gap: 4px;
     flex-wrap: wrap;
   }
   &[data-layout='vertical'] {
     &,
-    .ItemsWrapper {
+    > .ItemsWrapper {
       flex-direction: column;
       align-items: stretch;
     }
-    .Label {
+    > .Label {
       @include EditableVerticalSectionLabel;
     }
   }
   @at-root &[data-layout='horizontal'] {
     &,
-    .ItemsWrapper {
+    > .ItemsWrapper {
       flex-direction: row;
       align-items: center;
     }
