Issue #10: Fixed lists presentation for non-in-place-editable tables. Created demo for data set editor.

--- a/src/components/data/EditableList/EditableList.module.scss
+++ b/src/components/data/EditableList/EditableList.module.scss
@@ -22,7 +22,7 @@
       @include EditableVerticalSectionLabel;
     }
   }
-  @at-root &[data-layout='horizontal'] {
+  &[data-layout='horizontal'] {
     &,
     > .ItemsWrapper {
       flex-direction: row;
