Issue #29: Added adaptive layout (in the 1st approx) for main app frames.

--- a/src/pages/LoadDataPage/LoadDataPage.module.scss
+++ b/src/pages/LoadDataPage/LoadDataPage.module.scss
@@ -25,7 +25,8 @@
     box-shadow: none;
     pointer-events: none;
   }
-  &.loaded,
+  &:not(.inited),
+  &.goingOut,
   &.loading {
     .WaiterPanel {
       opacity: 1;
