Issue #24: Vertical delimiters for editable objects with verical layout.

--- a/src/core/assets/scss/mixins.scss
+++ b/src/core/assets/scss/mixins.scss
@@ -75,6 +75,6 @@
   @include EditableLabel;
   @include TitleText;
   color: $defaultTextColor;
-  margin-top: 20px;
+  // margin-top: 12px;
   margin-bottom: 12px;
 }
