--- a/src/components/data/EditableTable/EditableTable.module.scss
+++ b/src/components/data/EditableTable/EditableTable.module.scss
@@ -53,6 +53,9 @@
     }
   }
   .PaginationAndStats {
+    &:not(.allowPagination) {
+      display: none;
+    }
     margin-top: 8px;
     display: flex;
     gap: 16px;
