--- a/src/components/data/EditableTable/HeaderCellComponent/HeaderCellComponent.module.scss
+++ b/src/components/data/EditableTable/HeaderCellComponent/HeaderCellComponent.module.scss
@@ -1,3 +1,10 @@
 .HeaderCellComponent {
   /*!KEEP*/
+  .Content {
+    /*!KEEP*/
+  }
+  &.hasActiveFilter .Content {
+    opacity: 0;
+    pointer-events: none;
+  }
 }
