Issue #43: Limited minimal width for columns with filters to 150px, added autofocus on the 1st found input inner node for `GenericFilter` component.

--- a/src/components/data/EditableTable/EditableTable.module.scss
+++ b/src/components/data/EditableTable/EditableTable.module.scss
@@ -32,8 +32,11 @@
       color: #fff;
       font-weight: 500;
       position: relative;
-      &[data-has-filter] {
+      &[data-has-active-filter] {
         background-color: color.adjust($primaryColor, $lightness: -10%);
+      }
+      &[data-with-filter] {
+        min-width: 150px;
       }
     }
     .thWrapper {
@@ -54,7 +57,7 @@
     }
     td {
       border-bottom: 1px solid $borderColor;
-      &[data-has-filter] {
+      &[data-has-active-filter] {
         background-color: color.change($primaryColor, $alpha: 0.1);
       }
     }
