--- a/src/components/RandoEditor/DataEditorWrapper/DataEditorWrapper.scss
+++ b/src/components/RandoEditor/DataEditorWrapper/DataEditorWrapper.scss
@@ -1,12 +1,14 @@
 .DataEditorWrapper {
   position: relative;
   overflow: hidden;
-  margin: 16px 0;
+  // padding: 16px 0;
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  // gap: 16px;
   .header {
     @include BigTitleText;
+    padding: 0 16px;
+    margin-top: 16px;
   }
   .container {
     flex: 1;
@@ -14,9 +16,10 @@
     &.scrollable {
       overflow: auto;
     }
-    .content {
-      // border: 1px solid red;
-    }
+  }
+  .content {
+    padding: 16px;
+    // border: 1px solid red;
   }
   flex: 1;
 }
