--- a/src/components/RandoEditor/SectionsNavigator/SectionsNavigator.scss
+++ b/src/components/RandoEditor/SectionsNavigator/SectionsNavigator.scss
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   flex: 1;
-  margin: 16px 0;
   > .container {
     flex: 1;
     overflow: hidden;
@@ -14,6 +13,7 @@
     display: flex;
     flex-direction: column;
     align-items: stretch;
+    padding: 16px;
     gap: 16px;
     > .delimiter {
       border-top: 1px solid $borderColor;
