--- a/src/components/data/EditableList/EditableList.module.scss
+++ b/src/components/data/EditableList/EditableList.module.scss
@@ -1,30 +1,31 @@
 .EditableList {
-  .ItemElement,
-  > .ItemsWrapper {
-    /*!KEEP*/
-  }
-  > .Label {
+  .Label {
     @include EditableLabel;
   }
-  &,
-  > .ItemsWrapper {
+  & {
     display: flex;
     gap: 4px;
+    flex-direction: column;
+  }
+  .Wrapper,
+  .ItemsWrapper {
+    display: flex;
+    gap: 8px;
     flex-wrap: wrap;
   }
   &[data-layout='vertical'] {
-    &,
-    > .ItemsWrapper {
+    .Wrapper,
+    .ItemsWrapper {
       flex-direction: column;
       align-items: stretch;
     }
-    > .Label {
+    .Label {
       @include EditableVerticalSectionLabel;
     }
   }
   &[data-layout='horizontal'] {
-    &,
-    > .ItemsWrapper {
+    .Wrapper,
+    .ItemsWrapper {
       flex-direction: row;
       align-items: center;
     }
