--- a/src/components/data/GenericEditable/GenericEditable.module.scss
+++ b/src/components/data/GenericEditable/GenericEditable.module.scss
@@ -1,13 +1,14 @@
 .GenericEditable {
   $vSpacing: 20px;
-  // NOTE: Variant with border delimiter
-  &[data-layout='vertical'] {
-    margin-top: $vSpacing;
-    margin-bottom: $vSpacing + 4px;
-  }
-  &[data-layout='vertical'] + &[data-layout='vertical'] {
-    margin-top: 0;
-  }
+  /* // NOTE: Variant with border delimiter
+   * &[data-layout='vertical'] {
+   *   margin-top: $vSpacing;
+   *   margin-bottom: $vSpacing + 4px;
+   * }
+   * &[data-layout='vertical'] + &[data-layout='vertical'] {
+   *   margin-top: 0;
+   * }
+   */
   /* // NOTE: Variant with border delimiter
   &[data-layout='vertical'] {
     border-top: 1px solid $borderColor;
