--- a/src/components/app/AppLayout/AppLayoutDev.module.scss
+++ b/src/components/app/AppLayout/AppLayoutDev.module.scss
@@ -1,4 +1,5 @@
 .AppLayout {
+  @include defaultFont;
   & {
     display: flex;
     flex-direction: column;
@@ -11,7 +12,7 @@
     align-items: stretch;
     justify-content: stretch;
     z-index: 100;
-    background-color: $errorColor;
+    background-color: color.adjust($errorColor, $lightness: -15%);
     color: #fff;
     padding: 8px 20px;
   }
