Issues #41, #42: Edit table row modal dialogue: added actions' section with buttons: 'Save', 'Cancel', 'Remove'. Now it keep changed state until 'Save' button has pressed, discard those changes on 'Cancel' and remves the data row on 'Remove' click.

--- a/src/components/data/EditableObject/EditableObject.module.scss
+++ b/src/components/data/EditableObject/EditableObject.module.scss
@@ -1,4 +1,15 @@
 .EditableObject {
+  &[data-layout='vertical'] {
+    &:not(:first-child) {
+      margin-top: 12px;
+    }
+    &:not(:last-child) {
+      margin-bottom: 20px;
+    }
+    & + & {
+      margin-top: 0;
+    }
+  }
   .EditableObject_Label {
     @include EditableLabel;
   }
