Issue #51: Created modal with filter conditions dialog (with basic form, without actions, -- it's in progress).

--- a/src/components/data/GenericFilterControl/GenericFilterControl.module.scss
+++ b/src/components/data/GenericFilterControl/GenericFilterControl.module.scss
@@ -1,9 +1,10 @@
-.GenericFilter {
-  border: 1px solid blue;
+.GenericFilterControl {
+  // border: 1px solid blue;
 }
 .FilterIcon {
   /*!KEEP*/
 }
+/* NOTE: Moved to `GenericFilterDialog.module.scss`
 .FilterControl {
   // border: 1px solid red;
   position: absolute;
@@ -38,3 +39,4 @@
     border-color: transparent !important;
   }
 }
+*/
