Issue #51: Finished filter conditions edit form dialog. Added functionality to reset filter (via button in the edit filter dialog). Removed extra code. Other minor changes.

--- a/src/components/data/EditableTable/EditRowForm/EditRowForm.module.scss
+++ b/src/components/data/EditableTable/EditRowForm/EditRowForm.module.scss
@@ -1,9 +1,3 @@
-.Content,
-.Actions,
-.Action,
-.EditRowForm {
-  /*!KEEP*/
-}
 .EditRowForm {
   position: relative;
   overflow: hidden;
@@ -16,9 +10,6 @@
   overflow: auto;
   padding: 16px;
 }
-.Actions {
-  // padding: 16px 16px;
-}
 .ActionsLeft,
 .ActionsRight,
 .Actions {
@@ -29,4 +20,7 @@
 .ActionsRight {
   justify-content: flex-end;
   flex: 1;
+}
+.Action {
+  /*!KEEP*/
 }
