Issue #52: Added api interfaces to `EditDataSet` and `EditableTable`. Added features for add data row, reset filters and update filters status on the top level of editing components (in `DataEditorWrapper`). Changed top level component for dataset editing from `GenericEditable` to `EditableTable` -- we're assuming that top level of the dataset is always table). Removed some obsolete and debug code.

--- a/src/components/RandoEditor/EditorHeader/EditorHeader.module.scss
+++ b/src/components/RandoEditor/EditorHeader/EditorHeader.module.scss
@@ -20,3 +20,13 @@
   color: $primaryColor;
   font-size: 190%;
 }
+
+.MiddleMenu,
+.RightMenu {
+  display: flex;
+  gap: 4px;
+  button {
+    // Make buttons a bit more compact
+    padding: 0 8px;
+  }
+}
