--- a/src/components/app/AppLayout/AppLayout.module.scss
+++ b/src/components/app/AppLayout/AppLayout.module.scss
@@ -14,12 +14,44 @@
     align-items: stretch;
     justify-content: stretch;
     z-index: 100;
+    transition: all $animationTimeMs;
+
+  }
+  &:global(.page-root) {
+    .AppLayout_Header {
+      border: 1px solid red;
+      margin-top: -80px;
+    }
   }
   .AppLayout_Footer {
     flex-shrink: 0;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+    gap: 8px;
+    padding: 4px 16px;
+    font-size: 80%;
+    opacity: .8;
+    // height: auto;
+    // max-height: auto;
+  }
+  .AppLayout_Footer,
+  .AppLayout_Footer_Left,
+  .AppLayout_Footer_Right {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  .AppLayout_Footer_Left {
+    flex: 1;
+    &:empty {
+      // display: none;
+    }
+  }
+  .AppLayout_Footer_Right {
+    flex-shrink: 1;
+    justify-content: flex-end;
+    text-align: right;
   }
   .AppLayout_Navbar {
     @media (min-width: 768px) {
